--- a/default.project.json
+++ b/default.project.json
@@ -1,37 +1,37 @@
 {
-  "name": "particle-editor-plugin",
-  "tree": {
-      "$className": "DataModel",
-      "HttpService": {
-          "$className": "HttpService",
-          "$properties": {
-              "HttpEnabled": true
-          }
-      },
-      "PluginDebugService": {
-          "$className": "PluginDebugService",
-          "user_Factories Plugin.rbxmx": {
-              "$className": "Plugin",
-              "Factories Plugin": {
+    "name": "particle-editor-plugin",
+    "tree": {
+        "$className": "DataModel",
+        "HttpService": {
+            "$className": "HttpService",
+            "$properties": {
+                "HttpEnabled": true
+            }
+        },
+        "PluginDebugService": {
+            "$className": "PluginDebugService",
+            "user_Particle Editor Plugin.rbxmx": {
+                "$className": "Plugin",
+                "Particle Editor Plugin": {
+                    "$className": "Folder",
+                    "$path": "src",
+                    "Packages": {
+                        "$className": "Folder",
+                        "$path": "Packages"
+                    }
+                }
+            }
+        },
+        "ServerStorage": {
+            "$className": "ServerStorage",
+            "Particle Editor Plugin": {
                 "$className": "Folder",
                 "$path": "src",
                 "Packages": {
-                  "$className": "Folder",
-                  "$path": "Packages"
+                    "$className": "Folder",
+                    "$path": "Packages"
                 }
             }
-          }
-      },
-      "ServerStorage": {
-          "$className": "ServerStorage",
-          "Factories Plugin": {
-              "$className": "Folder",
-              "$path": "src",
-              "Packages": {
-                "$className": "Folder",
-                "$path": "Packages"
-              }
-          }
-      }
-  }
+        }
+    }
 }
